<resources>
    <string name="app_name">ProyectoIDS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_viewRegister">Registrar Hrs/Actividad</string>
    <string name="lblTitleRegister">Registro de Actividades</string>
    <string name="dateButtonSet">Escoge la fecha</string>
    <string name="dateSelected" />
    <string name="hintHrsSelected">Max 8 hrs</string>
    <string name="lblActivityRegister">Detalle de Actividad</string>
    <string name="btnAltaActividad">Alta de Actividad</string>
    <string name="lblFechaUpdate">Fecha</string>
    <string name="txtHrsUpdate">Horas realizadas</string>
    <string name="lblComentsUpdate">Comentarios</string>
    <string name="btnSaveUpdate">Actualizar</string>
</resources>
