<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pgutierrezd.proyectoids.RegisterActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lblTitleRegister"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/btnDisplayCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:text="@string/dateButtonSet"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/lblSetDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/dateSelected"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Horas"
                android:layout_gravity="end"/>
            <EditText
                android:id="@+id/txtInputHrs"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/hintHrsSelected"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:layout_gravity="end"
                android:inputType="number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblActivityRegister"/>
            <EditText
                android:id="@+id/txtDescriptionActivityDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="3"
                android:maxLines="5"
                android:textColor="@color/colorAccent"
                android:lines="4"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"/>

            <Button
                android:id="@+id/btnSaveActivityDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnAltaActividad"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>